nsDisplayRemote mixes up content rect offsets
Categories
(Core :: Web Painting, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox74 | --- | fixed |
People
(Reporter: tnikkel, Assigned: tnikkel)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Updated•3 years ago
|
Assignee | ||
Comment 1•3 years ago
|
||
There are two distinct fixes in this patch.
-
Fix the rect we pass to EffectsInfo for both webrender and non-webrender case. The rect needs to be in coordinates of the subdocument but it was including the border/padding of the containing iframe. I also intersected it with the content rect so it doesn't extend outside of the subdocument, this doesn't fix anything AFAIK. I didn't track what caused this, it was likely in the first iteration of this code.
-
For webrender we double included the content rect offset in the rect we passed to PushIFrame because GetContentRectLayerOffset already includes that offset. This part is a regression from bug 1406715.
Updated•3 years ago
|
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6d283db170d7 Fix content rect offsets in nsDisplayRemote. r=mattwoodrow
Pushed by nbeleuzu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/74debaf6f6ae Update expectations for fission reftest. CLOSED TREE
Comment 4•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/6d283db170d7
https://hg.mozilla.org/mozilla-central/rev/74debaf6f6ae
Description
•